# Project1-RK3568

./: README.md
project/lv_port_linux_rk3568/: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c
project/lv_port_linux_rk3568/lib/freetype/lib/: libfreetype.la  libfreetype.so.6
project/lv_port_linux_rk3568/lv_usr/: CMakeLists.txt  lv_test.c  lv_test.h
project/lv_port_linux_rk3568/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
project/lv_port_linux_rk3568/ui/components/: ui_comp_hook.c
project/lv_port_linux_rk3568/ui/images/: ui_img_1616326166.c  ui_img_1935761100.c  ui_img_660221470.c  ui_img_899859302.c  ui_img_bofang_png.c  ui_img_crab_png.c  ui_img_daohang_png.c  ui_img_fish_png.c  ui_img_game_png.c  ui_img_laba_png.c  ui_img_lanya_png.c  ui_img_pic1_png.c  ui_img_pic2_png.c  ui_img_pic3_png.c  ui_img_shangyixiang_png.c  ui_img_shipin_png.c  ui_img_shuangshan_png.c  ui_img_turnleft_png.c  ui_img_turnright_png.c  ui_img_wifi_png.c  ui_img_xiayixiang_png.c  ui_img_yangshengqi_png.c  ui_img_yinle_png.c  ui_img_youjiantou_png.c  ui_img_zanting_png.c  ui_img_zhuye_png.c  ui_img_zuojiantou_png.c
project/lv_port_linux_rk3568/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h  ui_Screen6.c  ui_Screen6.h  ui_Screen7.c  ui_Screen7.h
project/lv_port_linux_rk3568/ui/src/: gpio.c  gpio.h  music.c  music.h  picture.c  picture.h  snack.c  snack.h  timer.c  timer.h  video.c  video.h
(+10 files in other folders)
